Testing different colors

--- a/app/index.html
+++ b/app/index.html
@@ -4,10 +4,10 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Weather based jacket suggestion">
+  <meta name="description" content="Erik Nilsson development and design portfolio">
   <meta name="author" content="Erik Nilsson @ strawcitydesign.com">
 
-  <title>Erik's Straw City</title>
+  <title>Straw City</title>
 
   <!-- Custom CSS -->
   <link href="css/styles.css" rel="stylesheet">
@@ -30,14 +30,14 @@
           <img id="tractor-beam" src="img/tractor-beam.svg" style="transform: scaleX(0);" />
           <img id="abductee" src="img/madmen.svg" />
           <div id="spotlight-holder">
-            <!-- <div id="spotlight-holder" style="transform: translateX(-44.4%);"> -->
             <img id="spotlight" src="img/spotlight.svg" />
             <img id="spotlight-base" src="img/spotlight-base.svg" />
-            <!-- <img id="spotlight-glass" src="img/spotlight-glass.svg" /> -->
+            <img id="spotlight-beam" src="img/spotlight-beam.svg" />
+            <img id="eggman-stencil" src="img/eggman-stencil.svg" />
           </div>
           <img id="spotlight-lever" src="img/spotlight-lever.svg" />
           <div id="record">
-            <img id="record-lines" src="img/record-lines.svg" style="transform: scale(0.4); opacity: 0;" />
+            <img id="record-lines" src="img/record-lines.svg" style="transform: scale(0.7); opacity: 0;" />
             <img id="record-shine" src="img/record-shine.svg" style="transform: rotateZ(0deg);" />
             <img id="spotlight-glass" src="img/spotlight-glass.svg" />
 
@@ -100,41 +100,40 @@
                       </g>
                   </svg>
           </div>
-          <div id="flashlight-holder" style="transform: translateX(-44.4%);">
-            <img id="flashlight" src="img/flashlight.svg" />
-            <img id="flashlight-button" src="img/flashlight-button.svg" />
-            <img id="flashlight-beam" src="img/flashlight-beam.svg" />
-            <img id="flashlight-mask-right" src="img/flashlight-mask-right.svg" />
-            <img id="flashlight-mask-left" src="img/flashlight-mask-left.svg" />
-          </div>
           <img id="pop-up-mask" src="img/pop-up-mask.svg" />
         </div>
       </div>
     </div>
     <div class="credits row">
-      <div id="title-credit" class="col-xs-12
+      <div id="title-credit" class="credit col-xs-12
                       col-sm-4
                       col-md-4
                       col-lg-4">
         <h1>Erik Nilsson</h1>
       </div>
-      <div id="about-credit" class="col-xs-12
+      <div id="about-credit" class="credit col-xs-12
                       col-sm-4
                       col-md-4
                       col-lg-4">
         <p>I'm currently a Frontend Development Engineer at Tactel in Malmö, Sweden.</p>
       </div>
-      <div id="contact-credit" class="col-xs-12
+      <div id="experience-credit" class="credit col-xs-12
                       col-sm-4
                       col-md-4
                       col-lg-4">
         <p>Formerly a digital designer who was abuducted into the realm of software development.</p>
       </div>
-      <div id="record-credit" class="col-xs-12
+      <div id="record-credit" class="credit col-xs-12
                       col-sm-4
                       col-md-4
                       col-lg-4">
         <p>A record of my experiences as digital designer and developer can be found at <a href="https://www.linkedin.com/in/erik-nilsson-b8a4772b/" target="_blank">LinkedIn</a> or <a href="http://github.com/strawcity">GitHub</a></p>
+      </div>
+      <div id="contact-credit" class="credit col-xs-12
+                      col-sm-4
+                      col-md-4
+                      col-lg-4">
+        <p>You can contact me at erik@newsite.com or @ me on twitter where I occasionally lurk</p>
       </div>
     </div>
     <div class="credits row">
