Saving before starting cue ball branch

--- a/app/index.html
+++ b/app/index.html
@@ -163,9 +163,8 @@
   <script src="js/time.js"></script>
   <script src="js/ufo.js"></script>
   <script src="js/record.js"></script>
-  <!-- <script src="js/flashlight.js"></script> -->
   <script src="js/spotlight.js"></script>
-  <script src="js/lookieloo.js"></script>
+  <script src="js/pool-cue.js"></script>
 </body>
 
 </html>
