Adding pool cue animation

--- a/app/index.html
+++ b/app/index.html
@@ -25,21 +25,14 @@
                       col-md-12
                       col-lg-12">
         <div class="screen-frame">
-          <div id="eggman"></div>
           <img id="ufo" src="img/ufo.svg" />
           <img id="tractor-beam" src="img/tractor-beam.svg" style="transform: scaleX(0);" />
           <img id="abductee" src="img/madmen.svg" />
-          <div id="spotlight-holder">
-            <img id="spotlight" src="img/spotlight.svg" />
-            <img id="spotlight-base" src="img/spotlight-base.svg" />
-            <img id="spotlight-beam" src="img/spotlight-beam.svg" />
-            <img id="eggman-stencil" src="img/eggman-stencil.svg" />
-          </div>
           <img id="spotlight-lever" src="img/spotlight-lever.svg" />
           <div id="record">
-            <img id="record-lines" src="img/record-lines.svg" style="transform: scale(0.7); opacity: 0;" />
+            <img id="record-lines" src="img/record-lines.svg" style="transform: scaleY(0.3); opacity: 0;" />
             <img id="record-shine" src="img/record-shine.svg" style="transform: rotateZ(0deg);" />
-            <img id="spotlight-glass" src="img/spotlight-glass.svg" />
+            <!-- <img id="spotlight-glass" src="img/spotlight-glass.svg" /> -->
 
             <img id="speaker-off" src="img/speaker-off.svg" />
             <img id="speaker-on" src="img/speaker.svg" />
@@ -53,13 +46,14 @@
             <img id="circle-shadow" src="img/circle-shadow.svg" />
             <img id="dart-board" src="img/dartboard.svg" style="opacity: 0;" />
           </div>
+          <img id="pool-cue" src="img/pool-cue.svg">
           <div id="loading-circle" style="transform: translateY(-50%) translateX(-50%);">
             <img src="img/black-circle.svg" />
           </div>
-          <div id="basketball" style="transform: translateY(104%); bottom: 0%;">
+          <!-- <div id="basketball" style="transform: translateY(104%); bottom: 0%;">
             <img id="basketball-lines" src="img/basketball.svg" />
-          </div>
-          <div id="darts">
+          </div> -->
+          <!-- <div id="darts">
             <svg class="dart" id="dart-1" width="105px" height="24px" viewBox="0 0 105 24" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                       <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
                           <g id="dart" transform="translate(52.394059, 9.292479) scale(-1, 1) rotate(4.000000) translate(-52.394059, -9.292479) translate(-0.105941, -2.707521)">
@@ -100,6 +94,12 @@
                       </g>
                   </svg>
           </div>
+          <div id="spotlight-holder">
+            <img id="spotlight" src="img/spotlight.svg" />
+            <img id="spotlight-base" src="img/spotlight-base.svg" />
+            <img id="spotlight-beam" src="img/spotlight-beam.svg" />
+            <img id="eggman-stencil" src="img/eggman-stencil.svg" />
+          </div> -->
           <img id="pop-up-mask" src="img/pop-up-mask.svg" />
         </div>
       </div>
