Adding cue ball animation

--- a/app/index.html
+++ b/app/index.html
@@ -115,7 +115,7 @@
                       col-sm-4
                       col-md-4
                       col-lg-4">
-        <p>I'm currently a Frontend Development Engineer at Tactel in Malmö, Sweden.</p>
+        <p>I'm currently a Frontend Development Engineer at <a href="www.tactel.se" target="_blank">Tactel</a> in Malmö, Sweden.</p>
       </div>
       <div id="experience-credit" class="credit col-xs-12
                       col-sm-4
@@ -127,13 +127,13 @@
                       col-sm-4
                       col-md-4
                       col-lg-4">
-        <p>A record of my experiences as digital designer and developer can be found at <a href="https://www.linkedin.com/in/erik-nilsson-b8a4772b/" target="_blank">LinkedIn</a> or <a href="http://github.com/strawcity">GitHub</a></p>
+        <p>A record of my experiences as digital designer and developer can be found at <a href="https://www.linkedin.com/in/erik-nilsson-b8a4772b/" target="_blank">LinkedIn</a> or <a href="http://github.com/strawcity" target="_blank">GitHub</a></p>
       </div>
       <div id="contact-credit" class="credit col-xs-12
                       col-sm-4
                       col-md-4
                       col-lg-4">
-        <p>You can contact me at erik@newsite.com or @ me on twitter where I occasionally lurk</p>
+        <p>You can shoot me a line at <a href="mailto:erik@strawcitydesign.com">erik@newsite.com</a></p>
       </div>
     </div>
     <div class="credits row">
