--- a/app/index.html
+++ b/app/index.html
@@ -69,7 +69,7 @@
                       col-sm-8
                       col-md-8
                       col-lg-8">
-        <p>Formerly a digital designer with a JavaScript habbit who was abuducted into the realm of software development.</p>
+        <p>Formerly a digital designer with a coding habit who was abuducted into the realm of software development.</p>
       </div>
       <div id="record-credit" class="credit col-xs-12
                       col-sm-8
