Saving work before refactoring animations switch case

--- a/app/index.html
+++ b/app/index.html
@@ -28,7 +28,6 @@
           <img id="ufo" src="img/ufo.svg" />
           <img id="tractor-beam" src="img/tractor-beam.svg" style="transform: scaleX(0);" />
           <img id="abductee" src="img/madmen.svg" />
-          <img id="spotlight-lever" src="img/spotlight-lever.svg" />
           <div id="record">
             <img id="record-lines" src="img/record-lines.svg" style="transform: scaleY(0.3); opacity: 0;" />
             <img id="record-shine" src="img/record-shine.svg" style="transform: rotateZ(0deg);" />
@@ -111,8 +110,8 @@
   <script src="js/time.js"></script>
   <script src="js/ufo.js"></script>
   <script src="js/record.js"></script>
-  <script src="js/spotlight.js"></script>
   <script src="js/pool-cue.js"></script>
+  <script src="js/lunar-lander.js"></script>
 </body>
 
 </html>
