Finished refactoring and starting lunar module

--- a/app/index.html
+++ b/app/index.html
@@ -47,6 +47,7 @@
           <div id="loading-circle" style="transform: translateY(-50%) translateX(-50%);">
             <img src="img/black-circle.svg" />
           </div>
+          <img id="moon-shadow" src="img/black-circle.svg" />
           <img id="pop-up-mask" src="img/pop-up-mask.svg" />
         </div>
       </div>
