Adding lunar idea

--- a/app/index.html
+++ b/app/index.html
@@ -48,6 +48,8 @@
             <img src="img/black-circle.svg" />
           </div>
           <img id="moon-shadow" src="img/black-circle.svg" />
+          <img id="lunar-lander" src="img/lunar-lander.svg" />
+          <img id="lunar-pod" src="img/lunar-pod.svg" />
           <img id="pop-up-mask" src="img/pop-up-mask.svg" />
         </div>
       </div>
