Changing to rocket saving work before particle work

--- a/app/index.html
+++ b/app/index.html
@@ -48,8 +48,11 @@
             <img src="img/black-circle.svg" />
           </div>
           <img id="moon-shadow" src="img/black-circle.svg" />
-          <img id="lunar-lander" src="img/lunar-lander.svg" />
-          <img id="lunar-pod" src="img/lunar-pod.svg" />
+          <div id="rocket" style="transform: rotate(-121deg)">
+            <img id="rocket-ship" src="img/rocket.svg" />
+            <img id="propulsion" />
+          </div>
+
           <img id="pop-up-mask" src="img/pop-up-mask.svg" />
         </div>
       </div>
