Updating all functions and refactoring

--- a/app/index.html
+++ b/app/index.html
@@ -29,10 +29,11 @@
           <img id="tractor-beam" src="img/tractor-beam.svg" style="transform: scaleX(0);" />
           <img id="abductee" src="img/madmen.svg" />
           <div id="record">
-            <img id="record-lines" src="img/record-lines.svg" style="transform: scaleY(0.3); opacity: 0;" />
+            <img id="record-lines" src="img/record-lines.svg" style="opacity: 0;" />
             <img id="record-shine" src="img/record-shine.svg" style="transform: rotateZ(0deg);" />
             <img id="speaker-off" src="img/speaker-off.svg" />
             <img id="speaker-on" src="img/speaker.svg" />
+            <img id="restart-button" src="img/restart.svg" />
           </div>
           <img id="record-pin" src="img/record-pin.svg" style="opacity: 0; transform: scaleX(1);" />
           <img id="record-needle" src="img/record-needle.svg" style="transform: rotate(18deg) skewX(65deg);" />
@@ -40,8 +41,6 @@
             <img id="white-circle-svg" src="img/white-circle.svg" />
             <img id="hour-hand" src="img/hour-hand.svg">
             <img id="minute-hand" src="img/minute-hand.svg">
-            <img id="circle-shadow" src="img/circle-shadow.svg" />
-            <img id="dart-board" src="img/dartboard.svg" style="opacity: 0;" />
           </div>
           <img id="pool-cue" src="img/pool-cue.svg">
           <div id="loading-circle" style="transform: translateY(-50%) translateX(-50%);">
@@ -79,8 +78,6 @@
               </svg>
             </div>
           </div>
-
-          <img id="pop-up-mask" src="img/pop-up-mask.svg" />
         </div>
       </div>
     </div>
@@ -114,6 +111,13 @@
                       col-md-8
                       col-lg-8">
         <p>You can shoot me a line at <a href="mailto:erik@strawcitydesign.com">erik@newsite.com</a></p>
+      </div>
+      <div id="thanks-credit" class="credit col-xs-12
+                      col-sm-8
+                      col-md-8
+                      col-lg-8">
+        <p>Thanks for watching and goodnight!</a>
+        </p>
       </div>
     </div>
     <div class="credits row">
